--- a/homepage.html
+++ b/homepage.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="F:\Aditya\VIT\cse\web development\js\jquery-3.3.1.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
@@ -33,7 +33,7 @@
     <div class='brok-title' style="text-align: center;">
         <div style='height:100px;'><p style='font-family: cursive;font-size:35px; color:rgb(0, 0, 0); overflow:visible'>Rental agreements without the intervention of Broker.</p></div>
         <div class='container' style='height:200px; overflow:hidden'>
-            <form class="navbar-form" role="search" action="F:\Aditya\VIT\CSE\web development\html\jquery testing.html">
+            <form class="navbar-form" role="search" action="#">
                 <div class="input-group" style='width:300px'>
                     <input type="text" placeholder="Search for a locality" style='height:34px' list='cities' name='city'>
                     <datalist id='cities'>
