--- a/homepage.html
+++ b/homepage.html
@@ -24,8 +24,8 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#aboutUs">About Us</a></li>
-                    <li><a href="F:\Aditya\VIT\cse\web development\Brokfree webpages\signup-login.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                    <li><a href="F:\Aditya\VIT\cse\web development\Brokfree webpages\signup-login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                 </ul>
             </div>
         </div>
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class='post-ads-button'>
-                <form action="F:\Aditya\VIT\CSE\web development\Brokfree webpages\signup-login.html" method='POST'>
+                <form action="#" method='POST'>
                     <button type='submit' class="btn btn-danger" style="font-size: 24px">Post Ads Now</button>
                 </form>
             </div>
