--- a/signup-login.html
+++ b/signup-login.html
@@ -176,7 +176,7 @@ textarea {
             <div id="signup">
                 <h1>Sign Up for Free</h1>
 
-                <form action="F:\Aditya\VIT\CSE\web development\html\jquery testing.html" method="post">
+                <form action="#" method="post">
 
                     <div class="top-row">
                         <div class="field-wrap">
@@ -224,7 +224,7 @@ textarea {
             <div id="login">
                 <h1>Welcome Back!</h1>
 
-                <form action="F:\Aditya\VIT\CSE\web development\html\jquery testing.html" method="post">
+                <form action="#" method="post">
 
                     <div class="field-wrap">
                         <label>
