--- a/view-profile.html
+++ b/view-profile.html
@@ -1,6 +1,5 @@
 <html>
 <head>
-    <title>Viewing Profile</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
@@ -65,6 +64,10 @@ a {
     padding:20px;
 }
 
+.go-to-home {
+    text-align:center;
+    padding:30px;
+}
 </style>
 <body>
     <div class="container">
@@ -92,6 +95,9 @@ a {
                 <p class="col-8" id="date">20/10/2018</p>
             </div>
             <a href="#">Change passoword?</a>
+            <div class="go-to-home">
+                <button class="btn btn-danger" style="box-shadow: 0 0 10px 4px rgba(209, 226, 240, 0.3);">Go back to Homepage</button>
+            </div>
         </div>
     </div>
 </body>
