--- a/view-profile.html
+++ b/view-profile.html
@@ -52,7 +52,7 @@ a {
     padding:20px;
 }
 
-#fname,#lname,#date,#mail {
+#fname,#lname,#date,#mail,#mob_no,#username {
     color:white;
     display:inline;
 }
@@ -93,6 +93,14 @@ a {
             <div class="row">
                 <label class="col-4 col-form-label">Date Joined : </label>
                 <p class="col-8" id="date">20/10/2018</p>
+            </div>
+            <div class="row">
+                <label class="col-4 col-form-label">Mobile Number : </label>
+                <p class="col-8" id="mob_no">8939465815</p>
+            </div>
+            <div class="row">
+                <label class="col-4 col-form-label">Username : </label>
+                <p class="col-8" id="username">sairocks</p>
             </div>
             <a href="#">Change passoword?</a>
             <div class="go-to-home">
