--- a/homepage.html
+++ b/homepage.html
@@ -19,6 +19,11 @@
   background-attachment:fixed;
   background-repeat: no-repeat;
   background-position: center center;
+  opacity:0;
+  transition:opacity 1s ease;
+}
+.loaded {
+    opacity:1;
 }
 .post-ads-title {
     background: rgba(19, 35, 47, .9);
@@ -83,7 +88,7 @@
 </style>
 </head>
 
-<body>
+<body onload="document.body.classList.add('loaded')">
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -92,13 +97,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">BrokFree</a>
+                <a class="navbar-brand" href="homepage.html">BrokFree</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#aboutUs">About Us</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                    <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                 </ul>
             </div>
         </div>
@@ -143,7 +148,7 @@
             <h3 style='display:inline; color:rgb(255, 255, 255); '>Are you a property owner?</h3>
         </div>
         <div class='post-ads-button'>
-            <form action="#" method='POST'>
+            <form action="posting-ads.html" method='POST'>
                 <button type='submit' class="btn btn-danger" style="font-size: 24px; box-shadow: 0 4px 10px 4px rgba(8, 25, 37, 0.3);">Post
                     Ads Now</button>
             </form>
@@ -254,7 +259,7 @@
                 clearInterval(interval);
             }
             $slider.on('mouseenter', stopslider).on('mouseleave', startslider);
-
+            startslider();
 
         });
     </script>
