--- a/signup.html
+++ b/signup.html
@@ -19,6 +19,11 @@
 body {
   background: #2f3ec9;
   font-family: 'Titillium Web', sans-serif;
+  opacity:0;
+  transition: opacity 1s ease;
+}
+.loaded {
+    opacity:1;
 }
 h1 {
   text-align: center;
@@ -123,7 +128,7 @@ textarea {
   width: 100%;
 }
 </style>
-<body>
+<body onload="document.body.classList.add('loaded')">
     <div class="container">
             <div class="form">
                 <div class="tab-content">
