--- a/view-profile.html
+++ b/view-profile.html
@@ -4,16 +4,23 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 <style>
-
 * {
     box-sizing: border-box;
 }
+
 html {
   overflow-y: scroll;
 }
+
 body {
   background: greenyellow;
   font-family: sans-serif;
+  -webkit-animation: fadein 1s;
+}
+
+@-webkit-keyframes fadein {
+    from {opacity:0;}
+    to {opacity:1;}
 }
 
 .container {
@@ -104,7 +111,9 @@ a {
             </div>
             <a href="#">Change passoword?</a>
             <div class="go-to-home">
-                <button class="btn btn-danger" style="box-shadow: 0 0 10px 4px rgba(209, 226, 240, 0.3);">Go back to Homepage</button>
+                <a href="homepage.html">
+                <button class="btn btn-danger" style="border-radius: 20px;">Go back to Homepage</button>
+                </a>
             </div>
         </div>
     </div>
