--- a/posting-ads.html
+++ b/posting-ads.html
@@ -204,75 +204,75 @@ button:hover {
         <div class="tab">Phase 3:
             <p class="radio">Lift facility ?<br><br>
                 <input class="radio-type" type="radio" name="lift_facility" value="there">Yes
-                <input class="radio-type" type="radio" name="lift_facility" value="not_there" checked>No
+                <input class="radio-type" type="radio" name="lift_facility1" value="not_there" checked>No
             </p>
             <p class="radio">Air Conditioner facility ?<br><br>
                 <input class="radio-type" type="radio" name="airconditioner" value="there">Yes
-                <input class="radio-type" type="radio" name="airconditioner" value="not_there" checked>No
+                <input class="radio-type" type="radio" name="airconditioner1" value="not_there" checked>No
             </p>
             <p class="radio">Swimming Pool ?<br><br>
                 <input class="radio-type" type="radio" name="swimming_pool" value="there">Yes
-                <input class="radio-type" type="radio" name="swimming_pool" value="not_there" checked>No
+                <input class="radio-type" type="radio" name="swimming_pool1" value="not_there" checked>No
             </p>
             <p class="radio">Servant room in house ?<br><br>
                 <input class="radio-type" type="radio" name="servant_room" value="there">Yes
-                <input class="radio-type" type="radio" name="servant_room" value="not_there" checked>No
+                <input class="radio-type" type="radio" name="servant_room1" value="not_there" checked>No
             </p>
             <p class="radio">Gas pipeline for house ?<br><br>
                 <input class="radio-type" type="radio" name="gas_pipeline" value="allowed">Yes
-                <input class="radio-type" type="radio" name="gas_pipeline" value="not_allowed" checked>No
+                <input class="radio-type" type="radio" name="gas_pipeline1" value="not_allowed" checked>No
             </p>
             <p class="radio">Sewage Treatment plant for house ?<br><br>
                 <input class="radio-type" type="radio" name="sewage_treatment" value="there">Yes
-                <input class="radio-type" type="radio" name="sewage_treatment" value="not_there" checked>No
+                <input class="radio-type" type="radio" name="sewage_treatment1" value="not_there" checked>No
             </p>
             <p class="radio">Visitor Parking facility ?<br><br>
                 <input class="radio-type" type="radio" name="visitor_parking" value="there">Yes
-                <input class="radio-type" type="radio" name="visitor_parking" value="not_there" checked>No
+                <input class="radio-type" type="radio" name="visitor_parking1" value="not_there" checked>No
             </p>
             <p class="radio">Gym facility ?<br><br>
                 <input class="radio-type" type="radio" name="gym_facility" value="there">Yes
-                <input class="radio-type" type="radio" name="gym_facility" value="not_there" checked>No
+                <input class="radio-type" type="radio" name="gym_facility1" value="not_there" checked>No
             </p>
             <p class="radio">Club House ?<br><br>
                 <input class="radio-type" type="radio" name="club_house" value="there">Yes
-                <input class="radio-type" type="radio" name="club_house" value="not_there" checked>No
+                <input class="radio-type" type="radio" name="club_house1" value="not_there" checked>No
             </p>
             <p class="radio">Children's Play Area there ?<br><br>
                 <input class="radio-type" type="radio" name="child_play_area" value="there">Yes
-                <input class="radio-type" type="radio" name="child_play_area" value="not_there" checked>No
+                <input class="radio-type" type="radio" name="child_play_area1" value="not_there" checked>No
             </p>
             <p class="radio">Park nearby ?<br><br>
                 <input class="radio-type" type="radio" name="park" value="there">Yes
-                <input class="radio-type" type="radio" name="park" value="not_there" checked>No
+                <input class="radio-type" type="radio" name="park1" value="not_there" checked>No
             </p>
             <p class="radio">House Keeping Services available?<br><br>
                 <input class="radio-type" type="radio" name="house_keeping" value="there">Yes
-                <input class="radio-type" type="radio" name="house_keeping" value="not_there" checked>No
+                <input class="radio-type" type="radio" name="house_keeping1" value="not_there" checked>No
             </p>
             <p class="radio">Internet Services provided ?<br><br>
                 <input class="radio-type" type="radio" name="internet" value="there">Yes
-                <input class="radio-type" type="radio" name="internet" value="not_there" checked>No
+                <input class="radio-type" type="radio" name="internet1" value="not_there" checked>No
             </p>
             <p class="radio">Intercom provided ?<br><br>
                 <input class="radio-type" type="radio" name="intercom" value="there">Yes
-                <input class="radio-type" type="radio" name="intercom" value="not_there" checked>No
+                <input class="radio-type" type="radio" name="intercom1" value="not_there" checked>No
             </p>
             <p class="radio">Fire Safety ensured ?<br><br>
                 <input class="radio-type" type="radio" name="fire_safety" value="there">Yes
-                <input class="radio-type" type="radio" name="fire_safety" value="not_there" checked>No
+                <input class="radio-type" type="radio" name="fire_safety1" value="not_there" checked>No
             </p>
             <p class="radio">Shopping Center Nearby ?<br><br>
                 <input class="radio-type" type="radio" name="shopping" value="there">Yes
-                <input class="radio-type" type="radio" name="shopping" value="not_there" checked>No
+                <input class="radio-type" type="radio" name="shopping1" value="not_there" checked>No
             </p>
             <p class="radio">Rainwater Harvesting Facility ?<br><br>
                 <input class="radio-type" type="radio" name="rainwater_harvesting" value="there">Yes
-                <input class="radio-type" type="radio" name="rainwater_harvesting" value="not_there" checked>No
+                <input class="radio-type" type="radio" name="rainwater_harvesting1" value="not_there" checked>No
             </p>
             <p class="radio">Power Backup ensured ?<br><br>
                 <input class="radio-type" type="radio" name="power_backup" value="there">Yes
-                <input class="radio-type" type="radio" name="power_backup" value="not_there" checked>No
+                <input class="radio-type" type="radio" name="power_backup1" value="not_there" checked>No
             </p>
         </div>
         <div style="overflow:auto;">
