--- a/homepage.html
+++ b/homepage.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
-        body {
+body {
   margin:0;
   padding:0;
   content:'';
@@ -22,15 +22,28 @@
   opacity:0;
   transition:opacity 1s ease;
 }
+.heading {
+    height:auto; 
+    text-align: center;
+}
 .loaded {
     opacity:1;
 }
+.search {
+    height:70px; 
+    overflow:hidden; 
+    text-align: center;
+}
+.search-group-btn {
+    display:inline;
+}
 .post-ads-title {
-    background: rgba(19, 35, 47, .9);
+    display:-webkit-inline-box;
+    background-color: rgba(19, 35, 47, .9);
     box-shadow: 0 4px 10px 4px rgba(8, 25, 37, 0.3);
     padding:10px;
     text-align: center;
-    margin: 0 400px 0 400px;
+    margin: auto;
 }
 .post-ads-button {
     text-align: center;
@@ -85,6 +98,111 @@
     width:720px;
     height:400px;
 }
+.search-content-list {
+    width:400px;
+    height:34px;
+}
+@media only screen and (max-width: 1200px){
+#slider{
+    width:auto;
+    height:400px;
+    overflow:hidden;
+    margin:0 20px 0 20px;
+}
+#slider .slides{
+    display:block;
+    width:3600px;
+    height:400px;
+    padding:0;
+}
+#slider .slide{
+    float:left;
+    list-style-type: none;
+    width:auto;
+    height:400px;
+}
+}
+@media only screen and (max-width: 992px){
+.post-ads-title {
+    background: rgba(19, 35, 47, .9);
+    box-shadow: 0 4px 10px 4px rgba(8, 25, 37, 0.3);
+    padding:10px;
+    text-align: center;
+    margin: auto;
+}
+}
+@media only screen and (max-width: 600px){
+.post-ads-title {
+    background: rgba(19, 35, 47, .9);
+    box-shadow: 0 4px 10px 4px rgba(8, 25, 37, 0.3);
+    padding:10px;
+    text-align: center;
+    margin: auto;
+}
+}
+@media only screen and (max-width: 768px){
+.search {
+    height:70px; 
+    overflow:hidden; 
+}
+}
+@media only screen and (max-width: 472px){
+.heading {
+    display:-webkit-inline-box;
+    height:140px;
+}
+}
+@media only screen and (max-width:520px){
+.search-content-list {
+    width: 370px;
+    height:34px;
+}
+}
+@media only screen and (max-width:494px){
+.search-content-list {
+    width: 350px;
+    height:34px;
+}
+}
+@media only screen and (max-width:476px){
+.search-content-list {
+    width: 320px;
+    height:34px;
+}
+}
+@media only screen and (max-width:445px){
+.search-content-list {
+    width: 280px;
+    height:34px;
+}
+}
+@media only screen and (max-width:405px){
+.heading {
+    display:-webkit-inline-box;
+    height:180px;
+}
+.search-content-list {
+    width: 250px;
+    height:34px;
+}
+}
+@media only screen and (max-width:372px){
+.search-content-list {
+    width: 200px;
+    height:34px;
+}
+}
+@media only screen and (max-width:334px){
+.heading{
+    height:250px;
+}
+}
+@media only screen and (max-width:321px){
+.search-content-list {
+    width: 150px;
+    height:34px;
+}
+}
 </style>
 </head>
 
@@ -109,44 +227,45 @@
         </div>
     </nav>
     <div class="container">
-        <div style='height:100px; text-align: center;'>
+        <div class="heading">
             <p style='font-family: cursive;font-size:35px; color:rgb(0, 0, 0); overflow:visible'>Rental agreements
                 without the intervention of Broker.</p>
         </div>
-        <div style='height:100px; overflow:hidden; text-align: center;'>
-            <form class="navbar-form" role="search" action="#">
-                <div class="input-group" style='width:500px'>
-                    <input type="text" placeholder="Search for a locality" style='height:34px; width:400px;' list='cities'
-                        name='city'>
-                    <datalist id='cities'>
-                        <option value="Anna Nagar">
-                        <option value="Arumbakkam">
-                        <option value="Porur">
-                        <option value="GST">
-                        <option value="Velachery">
-                        <option value="Mambakkam">
-                        <option value="Tambaram">
-                        <option value="Kelambakkam">
-                        <option value="Kandigai">
-                        <option value="OMR">
-                        <option value="ECR">
-                        <option value="Chetpet">
-                        <option value="Nungambakkam">
-                        <option value="Nanganallur">
-                        <option value="Chrompet">
-                    </datalist>
-                    <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit">
-                            <i class="glyphicon glyphicon-search"></i>
-                            Search
-                        </button>
+        <center>
+            <div class="search">
+                <form class="navbar-form" role="search" action="#">
+                    <div class="search-input-group">
+                        <input class="search-content-list" type="text" placeholder="Search for a locality" list='cities' name='city'>
+                        <datalist id='cities'>
+                            <option value="Anna Nagar">
+                            <option value="Arumbakkam">
+                            <option value="Porur">
+                            <option value="GST">
+                            <option value="Velachery">
+                            <option value="Mambakkam">
+                            <option value="Tambaram">
+                            <option value="Kelambakkam">
+                            <option value="Kandigai">
+                            <option value="OMR">
+                            <option value="ECR">
+                            <option value="Chetpet">
+                            <option value="Nungambakkam">
+                            <option value="Nanganallur">
+                            <option value="Chrompet">
+                        </datalist>
+                        <div class="search-group-btn">
+                            <button class="btn btn-default" type="submit">
+                                <i class="glyphicon glyphicon-search"></i>
+                                Search
+                            </button>
+                        </div>
                     </div>
-                </div>
-            </form>
-        </div>
-        <div class='post-ads-title'>
-            <h3 style='display:inline; color:rgb(255, 255, 255); '>Are you a property owner?</h3>
-        </div>
+                </form>
+            </div>
+            <div class='post-ads-title'>
+                <h3 style='display:inline; color:rgb(255, 255, 255); '>Are you a property owner?</h3>
+            </div>
+        </center>
         <div class='post-ads-button'>
             <form action="posting-ads.html" method='POST'>
                 <button type='submit' class="btn btn-danger" style="font-size: 24px; box-shadow: 0 4px 10px 4px rgba(8, 25, 37, 0.3);">Post
@@ -222,13 +341,12 @@
         </div>
     </div>
     <footer class="page-footer font-large blue pt-4">
-        <div class="footer-copyright text-right py-3">
+        <div class="footer-copyright text-right py-3" style="margin-right:20px;">
             <span style="background-color: rgb(231, 231, 231);">© 2018 Copyright: Sai and Akash</span>
         </div>
     </footer>
     <script>
         $(function () {
-
             //set interval
             //configuration
             var width = 720;
@@ -240,7 +358,6 @@
             var $slidecontainer = $slider.find('.slides');
             var $slides = $slidecontainer.find('.slide');
             var interval;
-
             //resume on mouseleave
             function startslider() {
                 interval = setInterval(function () {
@@ -253,14 +370,12 @@
                     });
                 }, pause);
             }
-
             //listen for mouseenter and pause
             function stopslider() {
                 clearInterval(interval);
             }
             $slider.on('mouseenter', stopslider).on('mouseleave', startslider);
             startslider();
-
         });
     </script>
 </body>
