--- a/homepage.html
+++ b/homepage.html
@@ -151,6 +151,25 @@ body {
     display:-webkit-inline-box;
     height:140px;
 }
+#slider{
+    width:auto;
+    height:300px;
+    overflow:hidden;
+    margin:0 20px 0 20px;
+}
+#slider .slides{
+    display:block;
+    width:3600px;
+    height:300px;
+    padding:0;
+}
+#slider .slide{
+    float:left;
+    list-style-type: none;
+    width:auto;
+    height:300px;
+}
+}
 }
 @media only screen and (max-width:520px){
 .search-content-list {
@@ -175,6 +194,25 @@ body {
     width: 280px;
     height:34px;
 }
+#slider{
+    width:auto;
+    height:250px;
+    overflow:hidden;
+    margin:0 20px 0 20px;
+}
+#slider .slides{
+    display:block;
+    width:3600px;
+    height:250px;
+    padding:0;
+}
+#slider .slide{
+    float:left;
+    list-style-type: none;
+    width:auto;
+    height:250px;
+}
+}
 }
 @media only screen and (max-width:405px){
 .heading {
@@ -190,6 +228,27 @@ body {
 .search-content-list {
     width: 200px;
     height:34px;
+}
+#slider{
+    width:auto;
+    height:220px;
+    overflow:hidden;
+    margin:0 20px 0 20px;
+}
+#slider .slides{
+    display:block;
+    width:3600px;
+    height:220px;
+    padding:0;
+}
+#slider .slide{
+    float:left;
+    list-style-type: none;
+    width:auto;
+    height:220px;
+}
+.heading {
+    height:200px;
 }
 }
 @media only screen and (max-width:334px){
