--- a/login.html
+++ b/login.html
@@ -4,135 +4,8 @@
     <title>Signup for Brokfree</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="login.css" type="text/css">
 </head>
-<style>
-    *, *:before, *:after {
-  box-sizing: border-box;
-}
-.form {
-  background: rgba(19, 35, 47, .9);
-  padding: 40px;
-  max-width: 600px;
-  margin: 40px auto;
-  border-radius: 4px;
-  box-shadow: 0 4px 10px 4px rgba(19, 35, 47, .3);
-}
-body {
-  background: #2f3ec9;
-  font-family: 'Titillium Web', sans-serif;
-  opacity:0;
-  transition: opacity 1s ease;
-}
-.loaded {
-    opacity:1;
-}
-h1 {
-  text-align: center;
-  color: #fff;
-  font-weight: 300;
-  margin: 0 0 40px;
-  border:1px solid white;
-  border-radius: 50px;
-  background:  rgba(160, 179, 176, .25)
-}
-h1:hover {
-    background:#1ab188
-}
-.field-wrap {
-  position: relative;
-  height:5%;
-  margin-bottom: 40px;
-}
-
-.top-row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-.top-row > div {
-  float: left;
-  width: 48%;
-  height: 5%;
-  margin-right: 4%;
-}
-.top-row > div:last-child {
-  margin: 0;
-}
-
-label {
-  position: absolute;
-  transform: translateY(6px);
-  left: 13px;
-  color: rgba(255, 255, 255, .5);
-  transition: all 0.25s ease;
-  -webkit-backface-visibility: hidden;
-  pointer-events: none;
-  font-size: 22px;
-}
-label .req {
-  margin: 2px;
-  color: #1ab188;
-}
-label.active {
-  transform: translateY(50px);
-  left: 2px;
-  font-size: 14px;
-}
-label.active .req {
-  opacity: 0;
-}
-label.highlight {
-  color: #fff;
-}
-
-input, textarea {
-  font-size: 22px;
-  display: block;
-  width: 100%;
-  height: 100%;
-  padding: 5px 10px;
-  background: none;
-  background-image: none;
-  border: 1px solid #a0b3b0;
-  color: #fff;
-  border-radius: 0;
-  transition: border-color 0.25s ease, box-shadow 0.25s ease;
-}
-input:focus, textarea:focus {
-  outline: 0;
-  border-color: #1ab188;
-}
-textarea {
-  border: 2px solid #a0b3b0;
-  resize: vertical;
-}
-
-.button {
-  border: 0;
-  outline: none;
-  border-radius: 0;
-  padding: 15px 0;
-  font-size: 2rem;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-  background: #1ab188;
-  color: #fff;
-  transition: all 0.5s ease;
-  -webkit-appearance: none;
-}
-.button:hover, .button:focus {
-  background: #179b77;
-}
-.button-block {
-  display: block;
-  width: 100%;
-}
-.forgot {
-  margin-top: -20px;
-  text-align: right;
-}
-</style>
 
 <body onload="document.body.classList.add('loaded')">
     <div class="container">
